# nxp_hal

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  setup-toolchain.sh
devices/: README.md  startup.c
devices/S32K118/startup/: system_S32K118.h
ers-board-v1.2/: ibom.html
ers-board-v1.2/kicad/: 100_usb_eds_filter.kicad_sch  200_power_supply.kicad_sch  210_prog_soft_start.kicad_sch  300_programmer.kicad_sch  400_controller.kicad_sch  500_can.kicad_sch  600_leds.kicad_sch  610_buttons.kicad_sch  620_sht.kicad_sch  630_encoder.kicad_sch  640_joystick.kicad_sch  650_servo.kicad_sch  660_display.kicad_sch  670_keypad.kicad_sch  680_eeprom.kicad_sch  ers-s32-board.kicad_pcb  ers-s32-board.kicad_prl  ers-s32-board.kicad_pro  ers-s32-board.kicad_sch  ers-s32-board.kicad_sym  fp-lib-table  sym-lib-table
ers-board-v1.2/kicad/3dmodels/: B0540W-7-F.stp  CC322522A-4R7K.stp  CX3225CA16000D0HSSCC.stp  FS32K116LAT0MLFT.stp  FS32K118LAT0MLHT.stp  LPC55S69JBD64K.stp  M95080-RMN6TP.stp  PTS815SJM250SMTR_LFS.stp  TS04-66-70-BK-260-SMT.stp  USB4215-03-A.stp  XRCGB40M000F1S2GR0.stp
ers-board-v1.2/kicad/ers-s32-board.pretty/: 150060xS75000.kicad_mod  3225-16-8-10-10_A.kicad_mod  B0540W-7-F.kicad_mod  CC322522A-4R7K.kicad_mod  CX3225CA16000D0HSSCC.kicad_mod  CX3225CA16000D0HSSCC_Hand_solder.kicad_mod  DISCO_Socket.kicad_mod  FS32K116LAT0MLFT.kicad_mod  FS32K118LAT0MLHT.kicad_mod  GSB1C41110SSHR.kicad_mod  HVSON-8-1EP_3x3mm_P0.65mm_EP1.6x2.4mm.kicad_mod  JOYSTICK_THUMB.kicad_mod  LCD0805.kicad_mod  LPC55S69JBD64K.kicad_mod  L_choke_DLW21SZ.kicad_mod  M95080-RMN6TP.kicad_mod  PEC12R-4220F-S0024.kicad_mod  PRTR5V0U2AX,215.kicad_mod  PTS815SJM250SMTR_LFS.kicad_mod  Pairwise_Connected_PinHeader_2x06_P2.54mm_Vertical.kicad_mod  Pairwise_Connected_ex56_PinHeader_2x06_P2.54mm_Vertical.kicad_mod  SHT40-BD1B-R2.kicad_mod  STM32F4-DISCO.kicad_mod  TS04-66-70-BK-260-SMT.kicad_mod  TYPE-C 16PIN 2MD(073).kicad_mod  TestPoint_Pad_D0.5mm.kicad_mod  USB4215-03-A.kicad_mod  XL-1608_LED_0603.kicad_mod  XRCGB40M000F1S2GR0.kicad_mod  XRCGB40M000F1S2GR0_HandSolder.kicad_mod
src/core/: clock.c  clock.h  debug_uart.c  debug_uart.h  syscalls.c  sysmem.c  system.c  system.h  systick.c  systick.h
src/e00_starter/: main.c
src/e01_led/: main.c  test.c
src/e02_btn/: main.c  test.c
src/e03_btn_cnt/: main.c  test.c
src/e04_kpad/: main.c
src/e05_enc/: main.c
src/e06_servo/: main.c
src/e07_lcd/: main.c
src/e08_eeprom/: main.c  test.c
src/e09_joy/: main.c
src/e10_sht/: main.c
src/e11_can/: main.c
src/e12_punchpress/: README.md
src/lib/: btn.c  btn.h  btn_cnt.c  btn_cnt.h  can.h  eeprom.c  eeprom.h  enc.c  enc.h  joy.c  joy.h  kpad.c  kpad.h  lcd.c  lcd.h  lcd_font.c  lcd_font.h  led.c  led.h  servo.c  servo.h  sht40.c  sht40.h  spi.c  spi.h
unity/: unity_config.h
